fix: fix button alignment in stage 4

--- a/src/newLaunch/baseStage.scss
+++ b/src/newLaunch/baseStage.scss
@@ -209,6 +209,11 @@
         top: 1px;
       }
     }
+    .adminInput {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
   }
 
   &.stage3 {
@@ -858,6 +863,19 @@
           .tokenSelect {
             margin-right: 0;
           }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 875px){
+  .page.stageContainer {
+    &.stage4 {
+      .adminInput {
+        .button2 {
+          margin-top: 15px;
+          width: 351px;
         }
       }
     }
